Changed height of header so text is no longer cut off

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ header {
 	width:100%;
 	background: url(../img/sand2-2.jpg) no-repeat center center;
 	background-size: cover;
-	height:100vh;
+	min-height:100vh;
 }
 
 h1  {
